# RemindR

./: Cargo.toml  Project_Report.txt  README.md  index.md  reminders.txt  requirements.txt
.github/workflows/: main.yml
src/: main.rs
